hphp/hack/test/typecheck/let/let_assign.php.exp
File "let_assign.php", line 5, characters 3-3:
Invalid lvalue (Parsing[1002])
